# climate_analysis

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
docs_template/source/background/: dag.md  directory_structure.md  running_example.md
docs_template/source/development/: how-to-contribute.md
docs_template/source/getting_started/: customising_the_template.md  template_setup.md
docs_template/source/guides_explanations/: hooks.md
documents/: paper.tex  presentation.tex  task_documents.py
src/climate_analysis/analysis/: task_analysis_template.py
src/climate_analysis/data/: CO2_excl_LULUCF.csv  gdp_growthrate.csv  inflation_gdpdeflator.csv  population_total.csv  renewable_perc_of_total_EC.csv
src/climate_analysis/data_management/: data_cleaning.py  task_data_management_template.py
src/climate_analysis/final/: task_final_template.py
tests/: test_template.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_stats4schools_smoking.py
